# KanJian

./: AGENTS.md  README.md  README_CN.md  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
src/: main.py
src/kanjian/: __init__.py  __main__.py  api.py  cli.py  core.py  gui.py  tools.py  web.py
tests/: __init__.py  test_unified_api.py
