[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kanjian"
version = "0.1.0"
description = "Interactive visual explanations for math and science concepts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KanJian Team", email = "kanjian@example.com"}
]
keywords = [
    "education",
    "visualization",
    "math",
    "science",
    "interactive",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pyqtgraph>=0.13.0",
    "PyQt6>=6.4.0",
    "manim>=0.18.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
all = [
    "kanjian[web,dev]",
]

[project.scripts]
kanjian = "kanjian.cli:main"
kanjian-gui = "kanjian.gui:main"
kanjian-web = "kanjian.web:main"

[project.urls]
Homepage = "https://github.com/cycleuser/KanJian"
Documentation = "https://github.com/cycleuser/KanJian#readme"
Repository = "https://github.com/cycleuser/KanJian.git"
Issues = "https://github.com/cycleuser/KanJian/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kanjian"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
]
ignore = [
    "E501",
]

[tool.ruff.isort]
known-first-party = ["kanjian"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
